# mcpclient

./: .gitignore  README.md  pyproject.toml
mcpclient/: __main__.py  cli.py  client.py  formatter.py
